# python-command-runner

./: .gitignore  .gitmodules  AGENTS.md  README.md  __init__.py  command.py  command_runner.py  package-structure.md  pyproject.toml  run_command.py  test.py
examples/: example.py
python_command_runner/: __init__.py  command.py  pretty_print.py  run_command.py
scratchpad/: project_structure_and_usage_template.md
scripts/: command.py  command_runner.py  mrege_pipes.py  pretty_print.py  run_command.py
src/: __init__.py  command.py  output_line.py  output_source.py  run_command.py
src/python_command_runner/: __init__.py  merge_pipes.py  output_line.py  output_source.py  run_command.py  run_with_timeout.py
src/python_command_runner/scripts/: __init__.py  command.py  command_output.py
tests/: __init__.py  _test_utils.py  test_command.py  test_merge_pipes.py  test_output_line.py  test_output_source.py  test_run_command.py  test_run_command_integration.py  test_run_command_unit.py  test_run_with_timeout.py  visual_check_pretty_print.py
