[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-command-runner"
version = "0.1.0"
description = "Small Python wrapper around subprocess for building and running commands"
requires-python = ">=3.10"
dependencies = [
    "python-pretty-print",
]

[tool.setuptools]
packages = ["python_command_runner"]
